Fix list alignment

--- a/src/styles/Archive.module.css
+++ b/src/styles/Archive.module.css
@@ -146,6 +146,7 @@
 
   li {
     display: block;
+    margin-left: 0;
 
     @media (--medium-up) {
       margin-right: calc(1.5 * var(--col-gap));
@@ -166,6 +167,10 @@
         &:nth-of-type(3n-2):nth-last-of-type(3) {
         margin-bottom: 0;
       }
+    }
+
+    & + li {
+      margin-top: 0;
     }
 
     a {
